<resources>
    <string name="app_name">USellup</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="category">"Category "</string>
    <string name="zero_amount">0.00 AED</string>
    <string name="top_title">Top Title</string>
    <string name="view_all">View All</string>
    <string name="shop_by_category">#SHOP BY CATEGORY</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="header1">Header 1</string>
    <string name="header2">Header 2</string>
    <string name="header3">Header 3</string>
    <string name="header4">Header 4</string>
    <string name="header5">Header 5</string>
    <string name="best_title">#BEST TITLE</string>
    <string name="search">Search</string>
    <string name="best_pratice"><![CDATA[Best practice Defination & Meaning]]></string>
    <string name="shop">SHOP</string>
</resources>